FIxed Overflow bug in Contact Section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -143,6 +143,7 @@ main {
   grid-template-columns: repeat(2, 1fr);
   gap: 10rem;
   padding-top: 3rem;
+  max-width: 100vw;
 
   // Left side
   .contact-form {
